--- a/css/overwrite.css
+++ b/css/overwrite.css
@@ -1,3 +1,18 @@
 /* p {
     font-family: papyrus;
 } */
+
+/* .experiencedesign p {
+    width: 250;
+    font-size: 100%;
+}
+
+.experiencemovement {
+    float: left;
+    padding-left: 50px;
+}
+
+.experienceriverside {
+    float: right;
+    padding-right: 50px;
+} */
